# parts-assistant

./: .gitignore  README.md
backend/: API_DOCUMENTATION.md  README.md  electronics_lab.db-shm  electronics_lab.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  startup.py
backend/app/: config.py  database.py  exceptions.py  init_db.py  initial_data.py  main.py
backend/app/api/v1/: ai.py  bins.py  categories.py  documents.py  import_export.py  part_specifications.py  parts.py  search.py  settings.py
backend/app/models/: __init__.py  bin.py  category.py  document.py  models.py  part.py  part_specification.py  setting.py
backend/app/schemas/: __init__.py  bin.py  category.py  document.py  part.py  part_specification.py  schemas.py  setting.py
backend/app/utils/: common.py  validation.py
backend/tests/: test_api.py  test_error_conditions.py  test_performance.py  test_validation.py
frontend/: index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
plan/: PHASE1_HANDOFF.md  PHASE1_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE3_SUMMARY.md  api-endpoints.md  api-integration.md  architecture-plan.md  database-schema.md  frontend-architecture.md  implementation-roadmap.md  phase1-implementation-plan.md  phase1-summary.md  phase2-implementation-plan.md  phase2-summary.md  phase2_handoff.md  phase2_implementation.md  phase3-implementation-plan.md  phase3-summary.md  projectBrief.md  (+5 more)
(+64 files in other folders)
